// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProblemEditor snapshots assets loaded, block and studio view not yet loaded, Spinner appears 1`] = `
<div
  className="text-center p-6"
>
  <Spinner
    animation="border"
    className="m-3"
    screenreadertext="Loading Problem Editor"
  />
</div>
`;

exports[`ProblemEditor snapshots block loaded, studio view and assets not yet loaded, Spinner appears 1`] = `
<div
  className="text-center p-6"
>
  <Spinner
    animation="border"
    className="m-3"
    screenreadertext="Loading Problem Editor"
  />
</div>
`;

exports[`ProblemEditor snapshots renders EditProblemView 1`] = `
<EditProblemView
  onClose={[MockFunction props.onClose]}
/>
`;

exports[`ProblemEditor snapshots renders SelectTypeModal 1`] = `
<SelectTypeModal
  onClose={[MockFunction props.onClose]}
/>
`;

exports[`ProblemEditor snapshots renders as expected with default behavior 1`] = `
<div
  className="text-center p-6"
>
  <Spinner
    animation="border"
    className="m-3"
    screenreadertext="Loading Problem Editor"
  />
</div>
`;

exports[`ProblemEditor snapshots studio view loaded, block and assets not yet loaded, Spinner appears 1`] = `
<div
  className="text-center p-6"
>
  <Spinner
    animation="border"
    className="m-3"
    screenreadertext="Loading Problem Editor"
  />
</div>
`;
